2013-06-12 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/insert_data.php: fixed the label of notice about the
	directory data_in.
	
	Fixes: #2271

2013-06-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_graph.php: fixed when have empty label.
	
	Fixes: #2260

2013-06-12 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_reporting.php: fixed the empty serialize vars.
	
	Fixes: #2276

2013-06-12  Ramon Novoa  <rnovoa@artica.es>

	* godmode/setup/performance.php: Added a help tip to explain the 'compact interpolation'.

2013-06-12 Mario Pulido <mario.pulido@artica.es>
	
	* pandoradb.data.postgreSQL.sql,
	pandoradb.data.oracle.sql,
        pandoradb_data.sql: Repair windows bug in "Restart Agent" action

2013-06-12 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/planned_downtime.php: make more easy the creation
	of planned downtime.
	
	Fixes: #2290

2013-06-12 Mario Pulido <mario.pulido@artica.es>
	
	* pandoradb.data.postgreSQL.sql,
	pandoradb.data.oracle.sql,
        pandoradb_data.sql: Change path in command alert.

2013-06-12 Miguel de Dios <miguel.dedios@artica.es>

	* operation/tree.php: fixed to show flash graph in the tree.
	
	Fixes: #2257

2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* operation/events/events_list.php, operation/events/events.php:
	fixed the free text search when there is characters as "(".
	
	MERGED FROM THE TRUNK

2013-06-07 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/module_manager.php: fixed the link of pagination.
	
	Fixes: #2250
	
	MERGED FROM THE TRUNK

2013-06-06  Sergio Martin <sergio.martin@artica.es>

	* extensions/snmp_explorer.ph: fixed wrong snmp branch on
	snmp interfaces explorer. Merged from trunk

2013-06-05 Miguel de Dios <miguel.dedios@artica.es>

	* include/constants.php, include/functions_agents.php,
	operation/agentes/estado_agente.php: fixed the filter of the list
	of agents.
	
	Fixes: #2269
	
	MERGED FROM THE TRUNK
